fixed the task status and the sidebar toggle switch alignment

--- a/frontend/src/components/toggler/toggle.css
+++ b/frontend/src/components/toggler/toggle.css
@@ -1,8 +1,8 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 30px;
+  width: 55px;
+  height: 25px;
 }
 
 .switch input {
@@ -26,8 +26,8 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 22px;
-  width: 22px;
+  height: 19px;
+  width: 20px;
   left: 4px;
   bottom: 3px;
   background-color: white;
