--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -13,13 +13,6 @@ body {
   
 }
 
-.active{
-    background-color: #635FC7;
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
-    color: #fff;
-}
-
 
 
 
